Cetys logo added

--- a/ProyectoIntegrador/src/app/login/login.page.html
+++ b/ProyectoIntegrador/src/app/login/login.page.html
@@ -1,7 +1,7 @@
 <ion-content padding color="light" style="justify-content: center;"> 
 
   <div id="logo" text-center>
-    <img class= "company-logo" src="./assets/white-bar-graph-and-stock.png">
+    <img class= "company-logo" src="./assets/logo-cetys.png">
   </div>
 
   <ion-list class="ion-padding" style="margin-bottom: 20px;">
