Revert "Merge branch 'master' of https://github.com/Emirod97/workStation"
This reverts commit 4647fed5015e6b15d9696aff472dae77cb2b92f2, reversing
changes made to f72b9ca5957eb617e20bc53844c2cae227ff56ed.

--- a/ProyectoIntegrador/src/app/tab1/tab1.page.html
+++ b/ProyectoIntegrador/src/app/tab1/tab1.page.html
@@ -24,24 +24,24 @@
             </ion-col>
             <ion-col>
               <div class="div-icono"><img src="https://image.flaticon.com/icons/png/512/53/53565.png"></div>
-              <div class="div-variable"><p class="variable-titulo">Temperatura</p>
+              <div class="div-variable"><p class="variable-titulo">Iluminación</p>
               <ion-progress-bar value="0.3"></ion-progress-bar>
-              <p class="variable-valor">34 C</p></div>
+              <p class="variable-valor">500 lms</p></div>
             </ion-col>
           </ion-row>
 
           <ion-row>
             <ion-col>
               <div class="div-icono"><img src="https://image.flaticon.com/icons/png/512/53/53565.png"></div>
-              <div class="div-variable"><p class="variable-titulo">Ruido</p>
+              <div class="div-variable"><p class="variable-titulo">Iluminación</p>
               <ion-progress-bar value="0.3"></ion-progress-bar>
-              <p class="variable-valor">30 dBA</p></div>
+              <p class="variable-valor">500 lms</p></div>
             </ion-col>
             <ion-col>
               <div class="div-icono"><img src="https://image.flaticon.com/icons/png/512/53/53565.png"></div>
-              <div class="div-variable"><p class="variable-titulo">Vibración</p>
+              <div class="div-variable"><p class="variable-titulo">Iluminación</p>
               <ion-progress-bar value="0.3"></ion-progress-bar>
-              <p class="variable-valor">58 Hz</p></div>
+              <p class="variable-valor">500 lms</p></div>
             </ion-col>
           </ion-row>
         </ion-grid>
