--- a/ProyectoIntegrador/src/app/tab2/tab2.page.html
+++ b/ProyectoIntegrador/src/app/tab2/tab2.page.html
@@ -1,36 +1,7 @@
 <ion-header>
 <ion-toolbar>
-  <ion-title>Detalles</ion-title>
+  <ion-title>Historial</ion-title>
 </ion-toolbar>
 </ion-header>
 
-<ion-content>
-<p class="page-header">Dispostivo 1</p>
-<p class="update-time">Última actualización hace 34 segundos</p>
-
-<!-- Segment with default selection -->
-<ion-segment (ionChange)="segmentChanged($event)" value="javascript">
-  <ion-segment-button value="python">
-    <ion-label>Iluminación</ion-label>
-  </ion-segment-button>
-  <ion-segment-button value="javascript">
-    <ion-label>Temperatura</ion-label>
-  </ion-segment-button>
-  <ion-segment-button value="javascript">
-    <ion-label>Ruido</ion-label>
-  </ion-segment-button>
-  <ion-segment-button value="javascript">
-    <ion-label>Vibración</ion-label>
-  </ion-segment-button>
-</ion-segment>
-
-<ion-card scrollable>
-  <ion-card-content>
-    <p>Test test test</p>
-    <p>Test test test</p>
-    <p>Test test test</p>
-    <p>Test test test</p>
-    <p>Test test test</p>
-  </ion-card-content>
-</ion-card>
-</ion-content>
+<ion-content></ion-content>
