--- a/ProyectoIntegrador/src/app/details/details.page.html
+++ b/ProyectoIntegrador/src/app/details/details.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Detalles</ion-title>
+    <ion-title>details</ion-title>
   </ion-toolbar>
 </ion-header>
 
