--- a/ProyectoIntegrador/src/app/tab1/tab1.page.scss
+++ b/ProyectoIntegrador/src/app/tab1/tab1.page.scss
@@ -18,6 +18,12 @@ ion-toolbar-color
   color: black;
 }
 
+ion-progress-bar
+{
+  height: 8px;
+  border-radius: 11px;
+}
+
 img
 {
   height: 20px;
