tried to change colors but failed

--- a/ProyectoIntegrador/src/app/tab2/tab2.page.html
+++ b/ProyectoIntegrador/src/app/tab2/tab2.page.html
@@ -33,7 +33,7 @@
 
 <ion-card>
   <ion-card-content>
-    <p class="graph-title">Temperatura</p>
+    <p class="graph-title">Temperatura (lms)</p>
   </ion-card-content>
 </ion-card>
 </ion-content>
