--- a/ProyectoIntegrador/src/app/tab1/tab1.page.scss
+++ b/ProyectoIntegrador/src/app/tab1/tab1.page.scss
@@ -1,4 +1,3 @@
-
 ion-toolbar-color
 {
   color: yellow;
@@ -62,4 +61,9 @@ ion-grid
 {
   margin: 0px;
   padding: 0px;
+}
+
+ion-card
+{
+  box-shadow: 3px 3px 10px #D8D8D8;
 }
