Add details page navigation

--- a/ProyectoIntegrador/src/app/login/login.page.html
+++ b/ProyectoIntegrador/src/app/login/login.page.html
@@ -4,7 +4,7 @@
     <img class= "company-logo" src="./assets/logo-cetys.png">
   </div>
 
-  <ion-list class="ion-padding" style="margin-bottom: 20px;">
+  <ion-list class="ion-padding" style="margin-bottom: 20px;" lines="none">
     <ion-item>
       <ion-icon name="person" style="margin-right: 2px"></ion-icon>
       <ion-input placeholder="Usuario"></ion-input>
