--- a/ProyectoIntegrador/src/app/tab2/tab2.page.html
+++ b/ProyectoIntegrador/src/app/tab2/tab2.page.html
@@ -1,9 +1,8 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button>
+      <ion-button (click)="back()">
         <ion-icon name="arrow-back"></ion-icon>
-
       </ion-button>
     </ion-buttons>
     <ion-title>Detalles</ion-title>
