--- a/ProyectoIntegrador/src/app/tab2/tab2.page.scss
+++ b/ProyectoIntegrador/src/app/tab2/tab2.page.scss
@@ -1,3 +1,5 @@
+//.toolbar-background{background:var(--ion-color-base)}
+.toolbar-background{background:black;}
 .page-header, .update-time
 {
   margin-left: 4%;
