Database/Api Connection

--- a/ProyectoIntegrador/src/app/tab1/tab1.page.html
+++ b/ProyectoIntegrador/src/app/tab1/tab1.page.html
@@ -50,6 +50,10 @@
         </ion-grid>
       </ion-card-content>
     </ion-card>
+    
+    <button (click)="getAllTasks()">getAllTasks</button>
+    <button (click)="getTask()">getTask</button>
+
 
 
 </ion-content>
