--- a/ProyectoIntegrador/src/app/tab2/tab2.page.html
+++ b/ProyectoIntegrador/src/app/tab2/tab2.page.html
@@ -1,46 +1,10 @@
-<<<<<<< HEAD
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-button>
-        <ion-icon name="arrow-back"></ion-icon>
-
-      </ion-button>
-    </ion-buttons>
-    <ion-title>Detalles</ion-title>
+    <ion-title>Historial</ion-title>
   </ion-toolbar>
 
 </ion-header>
 
 <ion-content>
-<p class="page-header">Dispostivo 1</p>
-<p class="update-time">Última actualización hace 34 segundos</p>
 
-<!-- Segment buttons with the first checked and the last disabled -->
-<ion-segment>
-  <ion-segment-button checked>
-    <ion-label>Temperatura</ion-label>
-    
-  </ion-segment-button>
-  <ion-segment-button>
-    <ion-label>Iluminación</ion-label>
-    
-  </ion-segment-button>
-  <ion-segment-button>
-    <ion-label>Ruido</ion-label>
-    
-  </ion-segment-button>
-  <ion-segment-button>
-    <ion-label>Vibración</ion-label>
-    
-  </ion-segment-button>
-</ion-segment>
-
-<ion-card>
-  <ion-card-content>
-    <p class="graph-title">Temperatura (lms)</p>
-  </ion-card-content>
-</ion-card>
 </ion-content>
-=======
->>>>>>> 6d183fb829e4c8a14bcfaab22ea2ef9c14cf864c
