--- a/ProyectoIntegrador/src/app/details/details.page.html
+++ b/ProyectoIntegrador/src/app/details/details.page.html
@@ -5,6 +5,12 @@
         <ion-icon name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
+    <ion-buttons slot="secondary">
+      <ion-button>
+        <!-- <ion-icon slot="icon-only" name="settings"></ion-icon> -->
+        <ion-icon slot="icon-only" name="more"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>Detalles</ion-title>
   </ion-toolbar>
 
@@ -35,4 +41,5 @@
     <p class="graph-title">Temperatura (lms)</p>
   </ion-card-content>
 </ion-card>
+
 </ion-content>
