--- a/ProyectoIntegrador/src/app/tab2/tab2.page.html
+++ b/ProyectoIntegrador/src/app/tab2/tab2.page.html
@@ -1,10 +1,20 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Historial</ion-title>
+    <ion-buttons slot="secondary">
+      <ion-button>
+        <p (click)="presentPopover()" class="filtro-button">Filtros</p>
+      </ion-button>
+    </ion-buttons>
+      <ion-title>Historial</ion-title>
   </ion-toolbar>
-
 </ion-header>
 
 <ion-content>
-
+  <p class="page-header">Dispostivo 1</p>
+  <p class="update-time">20 de abril de 2019</p>
+<ion-card>
+  <ion-card-content>
+    <p class="graph-title">Iluminación (lms)</p>
+  </ion-card-content>
+</ion-card>
 </ion-content>
