--- a/ProyectoIntegrador/src/app/details/details.page.html
+++ b/ProyectoIntegrador/src/app/details/details.page.html
@@ -37,7 +37,7 @@
 
   <ion-card>
     <ion-card-content>
-      <p class="graph-title">Temperatura (lms)</p>
+      <p class="graph-title">Temperatura</p>
     </ion-card-content>
     <ion-card-content>
       <canvas #lineCanvas></canvas>
