--- a/myApp/src/app/tab2/tab2.page.scss
+++ b/myApp/src/app/tab2/tab2.page.scss
@@ -2,7 +2,42 @@
 	width: 7%;
 	margin:10px;
 }
-ion-toolbar{
-	border-radius:10px 10px 10px 10px;
+
+ion-card-header{
 	filter: drop-shadow(0px 1px 3px rgba(77, 77, 77, 0.161));
+	text-align: left;
+	font-size:28px;
+	font-weight: bold;
+}
+.descripcion{
+	background: #eeeeee;
+	font-size:12px;
+	color: #8a8a8a;
+	font-weight: normal;
+	border-radius:8px 8px 8px 8px;
+	margin: 8px;
+	--padding-start: 12px
+}
+.notificacion{
+	font-size:17px;
+	font-family: SF Pro Display;
+	font-weight: normal;
+	padding: 5px 25px 5px 25px;
+
+}
+.alerta{
+	font-size:12px;
+	font-family: SF Pro Display;
+	font-weight: normal;
+	color: #8a8a8a;
+	margin-left: 80px;
+}
+ion-input{
+	background:white;
+	width:100px;
+	filter: drop-shadow(0px 1px 3px rgba(77, 77, 77, 0.161));
+	font-size:18px;
+	font-weight: normal;
+	border-radius:5px 5px 5px 5px;
+	--padding-start: 12px
 }
