--- a/ProyectoIntegrador/src/app/details/details.page.html
+++ b/ProyectoIntegrador/src/app/details/details.page.html
@@ -6,10 +6,9 @@
       </ion-button>
     </ion-buttons>
     <ion-buttons slot="secondary">
-      <ion-button>
+      <ion-button (click)="configuration()">
         <!-- <ion-icon slot="icon-only" name="settings"></ion-icon> -->
-        <ion-icon slot="icon-only" name="more"></ion-icon>
-      </ion-button>
+        <ion-icon name="settings"></ion-icon>      </ion-button>
     </ion-buttons>
     <ion-title>Detalles</ion-title>
   </ion-toolbar>
