--- a/ProyectoIntegrador/src/app/tab1/tab1.page.scss
+++ b/ProyectoIntegrador/src/app/tab1/tab1.page.scss
@@ -1,3 +1,13 @@
+ion-content
+{
+  --ion-background-color: #f9f9f9;
+}
+
+ion-toolbar
+{
+  --ion-background-color: #EDC006;
+}
+
 .toolbar-icon
 {
   width: 30%;
@@ -67,6 +77,7 @@ ion-grid
 ion-card
 {
   box-shadow: 3px 3px 10px #D8D8D8;
+  background-color: white;
 }
 
 .buttons{
