--- a/ProyectoIntegrador/src/app/tab2/tab2.page.html
+++ b/ProyectoIntegrador/src/app/tab2/tab2.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="secondary">
       <ion-button>
-        <p class="filtro-button">Filtros</p>
+        <p class="filtro-button" (click)="presentPopover($event)">Filtros</p>
       </ion-button>
     </ion-buttons>
       <ion-title>Historial</ion-title>
