--- a/ProyectoIntegrador/src/app/popover/popover.component.html
+++ b/ProyectoIntegrador/src/app/popover/popover.component.html
@@ -1,27 +1,23 @@
+<p>Variable</p>
+<ion-button>Iluminación</ion-button>
+<ion-button>Temperatura</ion-button>
+<ion-button>Ruido</ion-button>
+<ion-button>Vibración</ion-button>
 
-// notifications.component.html
-<ion-list no-padding no-margin>
-<ion-list-header color="dark">
-  <ion-label class="fw700">Notifications</ion-label>
-</ion-list-header>
+<p>Fecha</p>
 
-<ion-item color="primary" class="text-10" (click)="messages()">
-  <ion-icon name="mail" color="light"></ion-icon>
-  <ion-label>New Offer 25% OFF</ion-label>
+<ion-item>
+  <ion-label>Inicio</ion-label>
+  <ion-datetime value="2019-05-06" min="2010-01" max="2019"
+    displayFormat="DD MMM, YYYY"
+    monthShortNames="ene, feb, mar, abr, may, jun, jul, ago, sep, oct, nov, dic"></ion-datetime>
 </ion-item>
 
-<ion-item color="light" class="text-10" (click)="messages()">
-  <ion-icon name="mail-open" color="primary"></ion-icon>
-  <ion-label>New Offer 15% OFF by month!</ion-label>
+<ion-item>
+  <ion-label>Final</ion-label>
+  <ion-datetime value="2019-05-06" min="2010-01" max="2019"
+    displayFormat="DD MMM, YYYY"
+    monthShortNames="ene, feb, mar, abr, may, jun, jul, ago, sep, oct, nov, dic"></ion-datetime>
 </ion-item>
 
-<ion-item color="light" class="text-10" (click)="messages()">
-  <ion-icon name="mail-open" color="primary"></ion-icon>
-  <ion-label>New Offer 10% OFF by month!</ion-label>
-</ion-item>
-
-<ion-item color="primary" class="text-10" (click)="messages()">
-  <ion-icon name="mail" color="light"></ion-icon>
-  <ion-label>New Offer 35% OFF</ion-label>
-</ion-item>
-</ion-list>
+<ion-button>Aplicar</ion-button>
