styles and filters

--- a/ProyectoIntegrador/src/app/popover/popover.component.html
+++ b/ProyectoIntegrador/src/app/popover/popover.component.html
@@ -1,8 +1,21 @@
-<p>Variable</p>
-<ion-button>Iluminación</ion-button>
-<ion-button>Temperatura</ion-button>
-<ion-button>Ruido</ion-button>
-<ion-button>Vibración</ion-button>
+<ion-list>
+  <ion-item>
+    <ion-checkbox color="primary"></ion-checkbox>
+    <ion-label>Iluminación</ion-label>
+  </ion-item>
+  <ion-item>
+      <ion-checkbox color="primary"></ion-checkbox>
+      <ion-label>Temperatura</ion-label>
+  </ion-item>
+  <ion-item>
+      <ion-checkbox color="primary"></ion-checkbox>
+      <ion-label>Ruido</ion-label>
+    </ion-item>
+    <ion-item>
+        <ion-checkbox color="primary"></ion-checkbox>
+        <ion-label>Vibración</ion-label>
+    </ion-item>
+</ion-list>
 
 <p>Fecha</p>
 
@@ -20,4 +33,4 @@
     monthShortNames="ene, feb, mar, abr, may, jun, jul, ago, sep, oct, nov, dic"></ion-datetime>
 </ion-item>
 
-<ion-button>Aplicar</ion-button>
+<ion-button class="aplicar" expand="full" color="secondary">Aplicar</ion-button>
