--- a/ProyectoIntegrador/src/app/tab1/tab1.page.html
+++ b/ProyectoIntegrador/src/app/tab1/tab1.page.html
@@ -1,12 +1,11 @@
 <ion-header >
   <ion-toolbar>
     <ion-buttons slot="secondary">
-      <ion-button>
+      <ion-button (click)="logout()">
         <ion-icon name="log-out"></ion-icon>
-        <!-- <ion-icon src="/assets/logout.svg"></ion-icon> -->
       </ion-button>
     </ion-buttons>
-      <ion-title>Resumen</ion-title>
+    <ion-title>Inicio</ion-title>
   </ion-toolbar>
 </ion-header>
 
