--- a/ProyectoIntegrador/src/app/tab1/tab1.page.scss
+++ b/ProyectoIntegrador/src/app/tab1/tab1.page.scss
@@ -1,20 +1,3 @@
-ion-content
-{
-  --ion-background-color: #f9f9f9;
-}
-
-ion-toolbar
-{
-  --ion-background-color: #EDC006;
-}
-
-.toolbar-icon
-{
-  width: 30%;
-  height: auto;
-
-}
-
 .variable-titulo
 {
   font-size: 10pt;
@@ -28,11 +11,13 @@ ion-progress-bar
   border-radius: 11px;
 }
 
+/*
 ion-button{
   --clear-light:none;
   width:70%;
   margin: auto;
 }
+*/
 
 img
 {
@@ -82,7 +67,4 @@ ion-card
 
 .buttons{
   padding-left: 25%;
-}
-ion-button{
-  padding-top: 3%;
 }
