--- a/ProyectoIntegrador/src/theme/variables.scss
+++ b/ProyectoIntegrador/src/theme/variables.scss
@@ -4,7 +4,33 @@
 /** Ionic CSS Variables **/
 :root {
 
-  /** primary **/
+/**  =========    LIMITES    =======    **/
+/** verde **/
+--ion-color-success: #91EF5B;
+--ion-color-success-rgb: 16, 220, 96;
+--ion-color-success-contrast: #ffffff;
+--ion-color-success-contrast-rgb: 255, 255, 255;
+--ion-color-success-shade: #0ec254;
+--ion-color-success-tint: #28e070;
+
+/** amarillo **/
+--ion-color-warning: #EDC006;
+--ion-color-warning-rgb: 255, 206, 0;
+--ion-color-warning-contrast: #ffffff;
+--ion-color-warning-contrast-rgb: 255, 255, 255;
+--ion-color-warning-shade: #e0b500;
+--ion-color-warning-tint: #ffd31a;
+
+/** rojo **/
+--ion-color-danger: #E77475;
+--ion-color-danger-rgb: 245, 61, 61;
+--ion-color-danger-contrast: #ffffff;
+--ion-color-danger-contrast-rgb: 255, 255, 255;
+--ion-color-danger-shade: #d33939;
+--ion-color-danger-tint: #f25454;
+
+/**  =========    PALETA DE COLORES    =======    **/
+  /** azul **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
@@ -12,15 +38,15 @@
   --ion-color-primary-shade: #3171e0;
   --ion-color-primary-tint: #4c8dff;
 
-  /** secondary **/
-  --ion-color-secondary: #0cd1e8;
+  /** amarillo **/
+  --ion-color-secondary: rgb(255, 206, 9);
   --ion-color-secondary-rgb: 12, 209, 232;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
   --ion-color-secondary-shade: #0bb8cc;
   --ion-color-secondary-tint: #24d6ea;
 
-  /** tertiary **/
+  /** gris **/
   --ion-color-tertiary: #7044ff;
   --ion-color-tertiary-rgb: 112, 68, 255;
   --ion-color-tertiary-contrast: #ffffff;
@@ -28,31 +54,7 @@
   --ion-color-tertiary-shade: #633ce0;
   --ion-color-tertiary-tint: #7e57ff;
 
-  /** success **/
-  --ion-color-success: #91EF5B;
-  --ion-color-success-rgb: 16, 220, 96;
-  --ion-color-success-contrast: #ffffff;
-  --ion-color-success-contrast-rgb: 255, 255, 255;
-  --ion-color-success-shade: #0ec254;
-  --ion-color-success-tint: #28e070;
-
-  /** warning **/
-  --ion-color-warning: #EDC006;
-  --ion-color-warning-rgb: 255, 206, 0;
-  --ion-color-warning-contrast: #ffffff;
-  --ion-color-warning-contrast-rgb: 255, 255, 255;
-  --ion-color-warning-shade: #e0b500;
-  --ion-color-warning-tint: #ffd31a;
-
-  /** danger **/
-  --ion-color-danger: #E77475;
-  --ion-color-danger-rgb: 245, 61, 61;
-  --ion-color-danger-contrast: #ffffff;
-  --ion-color-danger-contrast-rgb: 255, 255, 255;
-  --ion-color-danger-shade: #d33939;
-  --ion-color-danger-tint: #f25454;
-
-  /** dark **/
+  /** negro **/
   --ion-color-dark: #222428;
   --ion-color-dark-rgb: 34, 34, 34;
   --ion-color-dark-contrast: #ffffff;
