labels en configuracion

--- a/ProyectoIntegrador/src/app/config/config.page.html
+++ b/ProyectoIntegrador/src/app/config/config.page.html
@@ -10,7 +10,7 @@ top: 7px;" src="./assets/_ionicons_svg_md-create.svg">
 
 <ion-card-header class="notificacion" style="margin:20px 0px 20px 0px; padding: 0px 20px 0px 20px;">
 <ion-item lines="none">
-  <ion-label>Envio de Notificación</ion-label>
+  <ion-label>Notificaciones</ion-label>
   <ion-toggle></ion-toggle>
   </ion-item>
 </ion-card-header>
@@ -31,10 +31,10 @@ Si se sobrepasa alguno de los límites,<br> se le notificará con una alerta.</p
     </ion-row>
    <ion-row>
       <ion-col style="margin-left:20px;">
-        Max <ion-input type="number" placeholder="lms"></ion-input>
+        Min <ion-input type="number" placeholder="lms"></ion-input>
       </ion-col>
       <ion-col>
-        Min  <ion-input type="number" placeholder="lms"></ion-input>
+        Max  <ion-input type="number" placeholder="lms"></ion-input>
       </ion-col>
     </ion-row>
 
@@ -46,10 +46,10 @@ Si se sobrepasa alguno de los límites,<br> se le notificará con una alerta.</p
     </ion-row>
    <ion-row>
       <ion-col style="margin-left:20px;">
-        Max <ion-input type="number" placeholder="°C"></ion-input>
+        Min <ion-input type="number" placeholder="°C"></ion-input>
       </ion-col>
       <ion-col>
-        Min  <ion-input type="number" placeholder="°C"></ion-input>
+        Max  <ion-input type="number" placeholder="°C"></ion-input>
       </ion-col>
     </ion-row>
 
@@ -61,10 +61,10 @@ Si se sobrepasa alguno de los límites,<br> se le notificará con una alerta.</p
     </ion-row>
     <ion-row>
       <ion-col style="margin-left:20px;">
-        Max <ion-input type="number" placeholder="dBA" ></ion-input>
+        Min <ion-input type="number" placeholder="dBA" ></ion-input>
       </ion-col>
       <ion-col>
-        Min  <ion-input type="number" placeholder="dBA"></ion-input>
+        Max  <ion-input type="number" placeholder="dBA"></ion-input>
       </ion-col>
     </ion-row>
 
@@ -77,10 +77,10 @@ Si se sobrepasa alguno de los límites,<br> se le notificará con una alerta.</p
 
    <ion-row>
       <ion-col style="margin-left:20px;">
-        Max <ion-input type="number" placeholder="Hz"></ion-input>
+        Min <ion-input type="number" placeholder="Hz"></ion-input>
       </ion-col>
       <ion-col>
-        Min  <ion-input type="number" placeholder="Hz"></ion-input>
+        Max  <ion-input type="number" placeholder="Hz"></ion-input>
       </ion-col>
     </ion-row>
   </ion-grid>
