added filter icon

--- a/ProyectoIntegrador/src/app/details/details.page.html
+++ b/ProyectoIntegrador/src/app/details/details.page.html
@@ -6,6 +6,7 @@
       </ion-button>
     </ion-buttons>
     <ion-buttons slot="secondary">
+      <ion-button><ion-icon name="funnel"></ion-icon></ion-button>
       <ion-button (click)="configuration()">
         <!-- <ion-icon slot="icon-only" name="settings"></ion-icon> -->
         <ion-icon name="settings"></ion-icon>      </ion-button>
