--- a/ProyectoIntegrador/src/app/login/login.page.html
+++ b/ProyectoIntegrador/src/app/login/login.page.html
@@ -1,10 +1,10 @@
-<ion-content padding color="light" style="justify-content: center;"> 
+<ion-content padding style="justify-content: height:100%"> 
 
-  <div id="logo" text-center>
+  <div id="logo" text-center style="margin-top:10%; margin-bottom:5%">
     <img class= "company-logo" src="./assets/logo-cetys.png">
   </div>
 
-  <ion-list class="ion-padding" style="margin-bottom: 20px;" lines="none">
+  <ion-list class="ion-padding" style="margin-bottom: 25px; background-color:white;" lines="none">
     <ion-item>
       <ion-icon name="person" style="margin-right: 2px"></ion-icon>
       <ion-input placeholder="Usuario"></ion-input>
@@ -15,7 +15,7 @@
     </ion-item>
   </ion-list>
 
-  <ion-button color="dark" expand="block" (click)="enter()">Iniciar</ion-button>
+  <ion-button color="warning" expand="block" (click)="enter()">Iniciar</ion-button>
 
 </ion-content>
 <div class="the-footer">Olvido su contraseña?</div>
