--- a/ProyectoIntegrador/src/app/config/config.page.scss
+++ b/ProyectoIntegrador/src/app/config/config.page.scss
@@ -5,18 +5,10 @@
 
 ion-card-header{
 	filter: drop-shadow(0px 1px 3px rgba(77, 77, 77, 0.161));
-	text-align: left;
-	font-size:28px;
-	font-weight: bold;
+	background-color:white;
 }
-.descripcion{
-	background: #eeeeee;
-	font-size:12px;
-	color: #8a8a8a;
-	font-weight: normal;
-	border-radius:8px 8px 8px 8px;
-	margin: 8px;
-	--padding-start: 12px
+ion-item{
+	--ion-background-color:#fff;
 }
 .notificacion{
 	font-size:17px;
