--- a/ProyectoIntegrador/src/app/details/details.page.html
+++ b/ProyectoIntegrador/src/app/details/details.page.html
@@ -35,7 +35,7 @@
     </ion-segment-button>
   </ion-segment>
 
-  <ion-card>
+  <ion-card style="background-color:#ffffff;">
     <ion-card-content>
       <p class="graph-title">Temperatura</p>
     </ion-card-content>
