--- a/ProyectoIntegrador/src/app/login/login.page.scss
+++ b/ProyectoIntegrador/src/app/login/login.page.scss
@@ -1,8 +1,12 @@
 .ion-padding{
 	border-radius:10px 10px 10px 10px;
 	padding:
-	3px 13px 13px 3px;
+	3px 13px 3px 13px;
 	filter: drop-shadow(0px 1px 3px rgba(77, 77, 77, 0.161));
+}
+
+ion-item{
+	--ion-background-color:#fff;
 }
 
 .company-logo{
