--- a/ProyectoIntegrador/src/app/tab1/tab1.page.scss
+++ b/ProyectoIntegrador/src/app/tab1/tab1.page.scss
@@ -11,14 +11,6 @@ ion-progress-bar
   border-radius: 11px;
 }
 
-/*
-ion-button{
-  --clear-light:none;
-  width:70%;
-  margin: auto;
-}
-*/
-
 img
 {
   height: 20px;
@@ -66,6 +58,5 @@ ion-card
 }
 
 .buttons{
-   display: flex;
-  justify-content: center;
+  padding-left: 25%;
 }
