--- a/ProyectoIntegrador/src/theme/variables.scss
+++ b/ProyectoIntegrador/src/theme/variables.scss
@@ -39,7 +39,7 @@
   --ion-color-primary-tint: #4c8dff;
 
   /** amarillo **/
-  --ion-color-secondary: rgb(255, 206, 9);
+  --ion-color-secondary: #FFDA00;
   --ion-color-secondary-rgb: 12, 209, 232;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
