--- a/ProyectoIntegrador/src/app/popover/popover.component.html
+++ b/ProyectoIntegrador/src/app/popover/popover.component.html
@@ -35,4 +35,4 @@
     monthShortNames="ene, feb, mar, abr, may, jun, jul, ago, sep, oct, nov, dic"></ion-datetime>
 </ion-item>
 
-<ion-button class="aplicar" expand="full" color="secondary">Aplicar</ion-button>
+<ion-button class="aplicar" expand="full" color="primary" size="default">Aplicar</ion-button>
