--- a/ProyectoIntegrador/src/app/login/login.page.html
+++ b/ProyectoIntegrador/src/app/login/login.page.html
@@ -15,7 +15,7 @@
     </ion-item>
   </ion-list>
 
-  <ion-button color="warning" expand="block" (click)="enter()">Iniciar</ion-button>
+  <ion-button color="primary" expand="full" (click)="enter()">Iniciar</ion-button>
 
 </ion-content>
 <div class="the-footer">Olvido su contraseña?</div>
