--- a/ProyectoIntegrador/src/app/details/details.page.html
+++ b/ProyectoIntegrador/src/app/details/details.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header no-border>
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button (click)="back()">
@@ -34,7 +34,7 @@
     </ion-segment-button>
   </ion-segment>
 
-  <ion-card style="background-color:#ffffff;">
+  <ion-card>
     <ion-card-content>
       <p class="graph-title">Temperatura</p>
     </ion-card-content>
