--- a/ProyectoIntegrador/src/app/details/details.page.scss
+++ b/ProyectoIntegrador/src/app/details/details.page.scss
@@ -21,6 +21,17 @@
   color: black;
 }
 
+ion-card
+{
+  box-shadow: 0px 0px 3px #D8D8D8;
+  background-color: white;
+}
+
+ion-header
+{
+  box-shadow: 0px 2px 8px #D8D8D8;
+}
+
 .hydrated {
   ion-segment {
     border-bottom: 3px solid rgba(black, 0.1);
@@ -35,4 +46,9 @@
       }
     }
   }
+}
+
+ion-title
+{
+  font-weight: 400;
 }
