--- a/ProyectoIntegrador/src/app/tab2/tab2.page.scss
+++ b/ProyectoIntegrador/src/app/tab2/tab2.page.scss
@@ -18,7 +18,7 @@
 .filtro-button
 {
     text-transform: capitalize;
-    font-weight: bold;
+    font-weight: 400;
     letter-spacing: 0;
 }
 
@@ -35,5 +35,16 @@
 
 ion-card
 {
-  background-color: #ffffff;
+  box-shadow: 0px 0px 3px #D8D8D8;
+  background-color: white;
+}
+
+ion-header
+{
+  box-shadow: 0px 2px 8px #D8D8D8;
+}
+
+ion-title
+{
+  font-weight: 400;
 }
