--- a/ProyectoIntegrador/src/app/login/login.page.html
+++ b/ProyectoIntegrador/src/app/login/login.page.html
@@ -6,16 +6,16 @@
 
   <ion-list class="ion-padding" style="margin-bottom: 25px; background-color:white;" lines="none">
     <ion-item>
-      <ion-icon name="person" style="margin-right: 2px"></ion-icon>
+      <ion-icon name="person" style="margin-right: 2px" color="medium"></ion-icon>
       <ion-input placeholder="Usuario"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-icon name="lock" style="margin-right: 2px"></ion-icon>
+      <ion-icon name="lock" style="margin-right: 2px" color="medium"></ion-icon>
       <ion-input placeholder="Contraseña" type="password"></ion-input>
     </ion-item>
   </ion-list>
 
-  <ion-button color="primary" size="default" expand="full" (click)="enter()">Iniciar</ion-button>
+  <ion-button color="primary" size="default" expand="full" (click)="enter()">Iniciar sesión</ion-button>
 
 </ion-content>
 <div class="the-footer">¿Olvidó su contraseña?</div>
