--- a/ProyectoIntegrador/src/app/config/config.page.html
+++ b/ProyectoIntegrador/src/app/config/config.page.html
@@ -5,7 +5,7 @@
         <ion-icon name="arrow-back"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>Inicio</ion-title>
+    <ion-title>Configuración</ion-title>
   </ion-toolbar>
 </ion-header>
 
