--- a/ProyectoIntegrador/src/app/login/login.page.html
+++ b/ProyectoIntegrador/src/app/login/login.page.html
@@ -7,11 +7,11 @@
   <ion-list class="ion-padding" style="margin-bottom: 25px; background-color:white;" lines="none">
     <ion-item>
       <ion-icon name="person" style="margin-right: 10px" color="medium"></ion-icon>
-      <ion-input placeholder="Usuario"></ion-input>
+      <ion-input placeholder="Usuario" id="user"></ion-input>
     </ion-item>
     <ion-item>
       <ion-icon name="lock" style="margin-right: 10px" color="medium"></ion-icon>
-      <ion-input placeholder="Contraseña" type="password"></ion-input>
+      <ion-input placeholder="Contraseña" type="password" id="pass"></ion-input>
     </ion-item>
   </ion-list>
 
