--- a/ProyectoIntegrador/src/app/tab1/tab1.page.html
+++ b/ProyectoIntegrador/src/app/tab1/tab1.page.html
@@ -10,10 +10,11 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-list>
+      <ion-item *ngFor="let data of datas;let index = i">
   <ion-card class="welcome-card" (click)="pushpage()">
     <ion-card-header>
-      <p class="card-title">Dispositivo 1</p>
+      <p class="card-title">Dispositivo {{ data.id_sensor }}</p>
     </ion-card-header>
     <ion-card-content>
       <ion-grid>
@@ -22,8 +23,8 @@
             <div class="div-icono"><img src="/assets/iluminacion.svg"></div>
             <div class="div-variable">
               <p class="variable-titulo">Iluminación</p>
-              <ion-progress-bar color="success" value="0.3"></ion-progress-bar>
-              <p class="variable-valor">500 lms</p>
+              <ion-progress-bar value="0.7" [ngClass]="progress"  ></ion-progress-bar>
+              <p class="variable-valor">{{ data.luminosity }}lms</p>
             </div>
           </ion-col>
           <ion-col>
@@ -31,7 +32,7 @@
             <div class="div-variable">
               <p class="variable-titulo">Temperatura</p>
               <ion-progress-bar color="danger" value="0.7"></ion-progress-bar>
-              <p class="variable-valor">35 C</p>
+              <p class="variable-valor">{{ data.temperature }} C</p>
             </div>
           </ion-col>
         </ion-row>
@@ -42,7 +43,7 @@
             <div class="div-variable">
               <p class="variable-titulo">Ruido</p>
               <ion-progress-bar color="warning" value="0.5"></ion-progress-bar>
-              <p class="variable-valor">210 dBA</p>
+              <p class="variable-valor">{{ data.noise }} dBA</p>
             </div>
           </ion-col>
           <ion-col>
@@ -50,18 +51,16 @@
             <div class="div-variable">
               <p class="variable-titulo">Vibración</p>
               <ion-progress-bar color="success" value="0.6"></ion-progress-bar>
-              <p class="variable-valor">30 Hz</p>
+              <p class="variable-valor">{{ data.vibration }}Hz</p>
             </div>
           </ion-col>
         </ion-row>
       </ion-grid>
     </ion-card-content>
   </ion-card>
-
-  <div class="buttons">
-  <ion-button color="warning" (click)="getAllTasks()">Get All Tasks</ion-button>
-  <ion-button  color="warning"(click)="getTask()">Get Task</ion-button>
-</div>
+  </ion-item>
+</ion-list>
+  
 
 
 </ion-content>
