--- a/ProyectoIntegrador/src/app/tab1/tab1.page.scss
+++ b/ProyectoIntegrador/src/app/tab1/tab1.page.scss
@@ -9,6 +9,9 @@ ion-progress-bar
 {
   height: 8px;
   border-radius: 11px;
+  background-color: aqua!important;
+  background: aqua !important;
+  color: aqua!important;
   
 }
 
