--- a/ProyectoIntegrador/src/app/tab2/tab2.page.html
+++ b/ProyectoIntegrador/src/app/tab2/tab2.page.html
@@ -11,7 +11,7 @@
 
 <ion-content>
   <p class="page-header">Dispostivo 1</p>
-  <p class="update-time">20 de abril de 2019</p>
+  <p class="update-time">6 de mayo 2019</p>
   
   <div *ngIf="ilumShow">
       <ion-card style="background-color:#ffffff;">
